--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Profile Page</title>
@@ -20,7 +20,7 @@
             </div>
             <section class="row top">
                 <div class="col img-wrap" data-testid="test-profile-card">
-                    <img src="image/profile.jpg" style="height:70%; width:90%;" class="img-fluid" alt="Avatar" data-testid="test-user-avatar">
+                    <img src="profile.jpg" style="height:70%; width:90%;" class="img-fluid" alt="Avatar" data-testid="test-user-avatar">
                 </div>
                 <div class="col username">
                     <header>
@@ -158,7 +158,8 @@
     </article>
 
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 
 </body>
+
 </html>
