--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="text-info fst-italic">
                         <h6 >Frontend Developer</h6>
                     </div>
-                    <div class="row">
+                    <div class="row active">
                         <div class="col">
                             <i class="bi bi-clock-history pe-2" ></i><span id="time" data-testid="test-user-time"></span>
                         </div>
@@ -163,3 +163,4 @@
 </body>
 
 </html>
+
